fix(general): general changes made
- added husky scripts for pre-commits
- files passed through linter and formatter
- added dotenvx to manage the environmental variables file
- removed some folders and files that were irrelevant for the project
- fixed yaml (openapi) file according to specs
